--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif
+  font-family: Arial, Helvetica, sans-serif;
+  overflow: hidden;
 }
 
 .map {
@@ -24,9 +25,27 @@ body {
 }
 
 .loader img {
-  width: 400px;
+  width: 200px;
 }
 
 .loader h1 {
   margin-top: -100px;
+}
+
+.header {
+  padding: 10px;
+  background-color: orange;
+  color: black;
+  position: fixed;
+  top: 0;
+  right :0;
+  left: 0;
+  z-index : 2;
+}
+ 
+.header h1{
+  font-size: 25px;
+  padding: 0;
+  margin: 0;
+  text-align: center;
 }
